Inserito resolutor e prima versione ldp

--- a/bubblesorting/other/easy.properties
+++ b/bubblesorting/other/easy.properties
@@ -1,7 +1,7 @@
 number.ball=4
 number.container=5
 
-container.a=red,yellow,blue,blue
+container.a=red,yellow,blue,yellow
 container.b=red,red,blue,blue
 container.c=blue,red,yellow,yellow
 
