Fix generali prima del ricevimento

--- a/bubblesorting/other/hard_7.properties
+++ b/bubblesorting/other/hard_7.properties
@@ -1,10 +1,10 @@
 number.ball=4
 number.container=9
 
-container.a=red,pink,blue,blue
-container.b=yellow,green,darkGray,yellow
-container.c=pink,darkGray,pink,orange
-container.d=green,blue,pink,green
-container.e=blue,darkGray,red,yellow
-container.f=orange,orange,red,darkGray
-container.g=yellow,orange,red,green
+container.a=green,darkGray,pink,green
+container.b=green,red,green,blue
+container.c=red,darkGray,blue,red
+container.d=yellow,blue,yellow,pink
+container.e=darkGray,pink,orange,yellow
+container.f=orange,orange,pink,yellow
+container.g=darkGray,orange,red,blue
